--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,10 +22,8 @@ jobs:
           - laravel: 11.*
             testbench: 9.*
         exclude:
-          # Laravel 10 requires PHP 8.1+
           - laravel: 10.*
             php: 8.0
-          # Laravel 11 requires PHP 8.2+
           - laravel: 11.*
             php: 8.0
           - laravel: 11.*
@@ -50,4 +48,4 @@ jobs:
           composer update --prefer-stable --prefer-dist --no-interaction
 
       - name: Execute tests
-        run: vendor/bin/phpunit --coverage-text
+        run: vendor/bin/phpunit
