--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "php": "^8.0",
         "illuminate/support": "^9.0|^10.0|^11.0",
         "illuminate/http": "^9.0|^10.0|^11.0",
-        "illuminate/cache": "^9.0|^10.0|^11.0"
+        "illuminate/cache": "^9.0|^10.0|^11.0",
+        "guzzlehttp/guzzle": "^7.2"
     },
     "require-dev": {
         "orchestra/testbench": "^7.0|^8.0|^9.0",
