--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,15 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^8.0",
-        "illuminate/support": "^9.0|^10.0|^11.0",
-        "illuminate/http": "^9.0|^10.0|^11.0",
-        "illuminate/cache": "^9.0|^10.0|^11.0",
+        "php": "^8.1",
+        "illuminate/support": "^9.0 || ^10.0 || ^11.0 || ^12.0",
+        "illuminate/http": "^9.0 || ^10.0 || ^11.0 || ^12.0",
+        "illuminate/cache": "^9.0 || ^10.0 || ^11.0 || ^12.0",
         "guzzlehttp/guzzle": "^7.2"
     },
     "require-dev": {
-        "orchestra/testbench": "^7.0|^8.0|^9.0",
-        "phpunit/phpunit": "^9.5|^10.0"
+        "orchestra/testbench": "^7.0 || ^8.0 || ^9.0 || ^10.0",
+        "phpunit/phpunit": "^9.5 || ^10.0 || ^11.0"
     },
     "extra": {
         "laravel": {
